fix(container): removed duplicate margin which forces gap between last organism on page and footer

--- a/src/scss/atomic/molecules/_container.scss
+++ b/src/scss/atomic/molecules/_container.scss
@@ -1,6 +1,6 @@
 .container {
     max-width: $desktopHdWidth;
-    margin: 0 auto ($buildingUnit * 5);
+    margin: 0 auto;
     padding: ($buildingUnit * 5) ($buildingUnit * 1) 0 ($buildingUnit * 1);
 
     @include min-tablet() {
